--- a/AuthProject/AuthProject.csproj
+++ b/AuthProject/AuthProject.csproj
@@ -14,6 +14,8 @@
     <PackageReference Include="OpenIddict" Version="4.9.0" />
     <PackageReference Include="OpenIddict.AspNetCore" Version="4.9.0" />
     <PackageReference Include="OpenIddict.EntityFrameworkCore" Version="4.9.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.5.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.5.0" />
     <PackageReference Include="System.Linq.Async" Version="6.0.1" />
   </ItemGroup>
 
