--- a/ResourceServer/ResourceServer.csproj
+++ b/ResourceServer/ResourceServer.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="7.0.7" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.12" />
     <PackageReference Include="OpenIddict.Validation.AspNetCore" Version="4.9.0" />
     <PackageReference Include="OpenIddict.Validation.SystemNetHttp" Version="4.9.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
