--- a/AuthProject/AuthorizationServer.csproj
+++ b/AuthProject/AuthorizationServer.csproj
@@ -10,10 +10,12 @@
 	<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.5" />
+	<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
 	  
     <PackageReference Include="OpenIddict" Version="4.9.0" />
     <PackageReference Include="OpenIddict.AspNetCore" Version="4.9.0" />
     <PackageReference Include="OpenIddict.EntityFrameworkCore" Version="4.9.0" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.6.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.5.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.5.0" />
     <PackageReference Include="System.Linq.Async" Version="6.0.1" />
